[package]
name = "awmpde"
version = "0.2.0"
authors = ["i1i1"]
edition = "2018"

description = "awmpde used for deriving multipart request for actix web 3"
documentation = "https://docs.rs/awmpde"
repository = "https://github.com/i1i1/awmpde"
license = "MIT OR Apache-2.0"
keywords = ["multipart", "derive", "actix-web", "actix", "macro"]

readme = "README.md"

[features]
default = []
mozjpeg = ["awmpde_structs/mozjpeg"]
uuid = ["awmpde_structs/uuid"]

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
either = "1"
env_logger = "0.8"
futures = "0.3"
image = "0.23"
mime = "0.3"
serde = "1"
serde_json = "1"

awmpde_derive = { path = "../awmpde_derive", version = "0.3.0" }
awmpde_structs = { path = "../awmpde_structs", version = "0.2.0" }
