[package]
name = "awmpde"
version = "0.7.1"
authors = ["i1i1"]
edition = "2018"

description = "awmpde used for deriving multipart request for actix web 3"
documentation = "https://docs.rs/awmpde"
repository = "https://github.com/i1i1/awmpde"
license = "MIT OR Apache-2.0"
keywords = ["multipart", "derive", "actix-web", "actix", "macro"]

readme = "README.md"

[features]
default = []
mozjpeg = ["awmpde_structs/mozjpeg"]
uuid    = ["awmpde_structs/uuid"]
chrono  = ["awmpde_structs/chrono"]
test    = ["awmpde_structs/test"]

[dev-dependencies]
env_logger = "0.8"
serde = "1"
serde_json = "1"

[dependencies]
actix-multipart = "0.4.0"
actix-web = "4.0.0"
futures = "0.3"

awmpde_derive  = { version = "0.7.0", path = "../awmpde_derive" }
awmpde_structs = { version = "0.7.1", path = "../awmpde_structs" }
