[package]
name = "awmpde_structs"
version = "0.7.0"
authors = ["i1i1"]
edition = "2018"

description = "awmpde used for deriving multipart request for actix web 3"
documentation = "https://docs.rs/awmpde_structs"
repository = "https://github.com/i1i1/awmpde"
license = "MIT OR Apache-2.0"
keywords = ["multipart", "derive", "actix-web", "actix", "macro"]

[features]
default = []
test = ["actix-utils"]

[dependencies]
actix-web = "4.0.0-beta.10"
actix-http = "3.0.0-beta.11"
actix-multipart = "0.4.0-beta.7"
image = "0.23"
mime = "0.3"
futures = "0.3"
derive_deref = "1"
serde = "1"
serde_json = "1"
displaydoc = "0.1"
thiserror = "1"

actix-utils = { version = "3", optional = true }
uuid = { version = "0.8", optional = true }
mozjpeg = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
